# coldchain-ops

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.yaml  main.py  phase_3_walkthrough.md  phase_4_walkthrough.md  phase_5_walkthrough.md  phase_6_walkthrough.md  pyproject.toml
migrations/: 20260629103812_add_schema.sql  20260708100538_add_analytics_views.sql  20260708133153_add_product_embeddings.sql  20260709060027_add_llm_reader_role.sql  20260710133154_add_query_audit.sql  20260711134832_evolve_query_audit.sql
src/: ask_question.py  db.py  etl_orders.py  eval_pipeline.py  generate_date_dim.py  generate_logistics.py  generate_messy_orders.py  generate_product_embeddings.py  search_products.py  seed_dimensions.py
walkthroughs/: phase_1_walkthrough.md  phase_2_walkthrough.md  phase_6_walkthrough.md
