[project]
name = "coldchain-ops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.23.0",
    "google-genai>=2.10.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
    "ruff>=0.15.20",
]
